Updated product field mapper and service
Enhanced the product field module by adding a new method in the mapper class for saving product field DTOs to entity. Additionally, refactored the "addProductFields" method in the service class to utilize this newly added mapper method. Lastly, error handling was improved for the "deleteProductField" function.